[workspace]
resolver = "2"
members = [
    "archives-downloader",
    "archives-uploader",
    "kafka-producer",
]

[workspace.dependencies]
anyhow = "1.0.93"
bytes = "1.9.0"
bytesize = { version = "1.3.0", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
everscale-types = { version = "0.1.2", features = ["tycho"] }
hex = "0.4"
humantime = "2"
md5 = "0.7.0"
object_store = "0.11"
parking_lot = { version = "0.12.1" }
scopeguard = "1.2"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "stats",
] }
metrics = "0.23.0"

tycho-block-util = { git = "https://github.com/broxus/tycho.git" }
tycho-core = { git = "https://github.com/broxus/tycho.git" }
tycho-light-node = { git = "https://github.com/broxus/tycho.git" }
tycho-storage = { git = "https://github.com/broxus/tycho.git" }
tycho-util = { git = "https://github.com/broxus/tycho.git" }

rayon = "1.10.0"
serde = { version = "1.0.214", features = ["derive"] }

futures-util = "0.3.31"

[patch.crates-io]
everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "69c344eac4e1f95d66b045ae90db904ad8afdfaf" }

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
await_holding_lock = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_methods = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_on_vec_items = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
print_stdout = "warn"
print_stderr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
