[package]
name = "archives-downloader"
version = "0.3.0+tychov-6d2f73ea"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }

tycho-core = { workspace = true, features = ["s3"] }
tycho-light-node = { workspace = true, features = ["s3"] }
tycho-util = { workspace = true }

[lints]
workspace = true
