[package]
name = "archives-downloader"
version = "0.3.0+tychov-837e8086"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tikv-jemallocator = { workspace = true }
tycho-core-bridge = { workspace = true, features = ["s3"] }
tycho-core = { workspace = true, features = ["cli"] }

[lints]
workspace = true
