[package]
name = "archives-node"
version = "0.1.5+tychov-b118006b19e715ab7c8c91c1e96126a030ac6d19"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
md5 = { workspace = true }
object_store = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemalloc-ctl = { workspace = true }
tikv-jemallocator = { workspace = true }

tycho-block-util = { workspace = true }
tycho-core = { workspace = true }
tycho-light-node = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true }

serde = { workspace = true }

futures-util = { workspace = true }

[lints]
workspace = true
