[package]
name = "archives-uploader"
version = "0.3.0+tychov-7b6e584b"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
md5 = { workspace = true }
object_store = { workspace = true, features = ["aws", "gcp"] }
scopeguard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }

tycho-core = { workspace = true }
tycho-light-node = { workspace = true }
tycho-util = { workspace = true }

serde = { workspace = true }

futures-util = { workspace = true }

[lints]
workspace = true
