[package]
name = "archives-uploader"
version = "0.3.0+tychov-837e8086"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
metrics = { workspace = true }
md5 = { workspace = true }
object_store = { workspace = true }
scopeguard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }
tycho-util = { workspace = true, features = ["cli"] }

serde = { workspace = true }

futures-util = { workspace = true }
tycho-core-bridge = { workspace = true, features = ["s3"] }
tycho-core = { workspace = true, features = ["cli"] }

[lints]
workspace = true
