[package]
name = "kafka-producer"
version = "0.2.2+tychov-ec56ab8a"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }

tycho-core = { workspace = true }
tycho-block-util = { workspace = true }
tycho-light-node = { workspace = true }
tycho-util = { workspace = true }

everscale-types = { workspace = true }

rayon = { workspace = true }

serde = { workspace = true }

rdkafka = { version = "0.36.2", features = ["tokio"] }
futures-util = { workspace = true }

ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor.git" }

[features]
ssl = ["rdkafka/ssl-vendored"]

[lints]
workspace = true
