[package]
name = "kafka-producer"
version = "0.2.2+tychov-837e8086"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tikv-jemallocator = { workspace = true }

tycho-core = { workspace = true, features = ["cli"] }
tycho-block-util = { workspace = true }

tycho-types = { workspace = true }

rayon = { workspace = true }

serde = { workspace = true }

rdkafka = { version = "0.36.2", features = ["tokio"] }
futures-util = { workspace = true }

ton-block-compressor = { git = "https://github.com/broxus/ton-block-compressor.git" }
tycho-core-bridge = { workspace = true }

[features]
ssl = ["rdkafka/ssl-vendored"]

[lints]
workspace = true
